kubernetes/apps/business/bighorn-byte-web/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bighorn-byte-web
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - bighornbyte.com
    - www.bighornbyte.com
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte-apex
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: bighorn-byte-web
          port: 8000
